# dd2358_software_lab

./: .gitignore  Dockerfile  README.md  configure.ac  start.sh
assignment/: Makefile.am  autogen.sh  config.status  configure  configure.ac
assignment/include/: cwblas.h
assignment/src/: Makefile.am  main.cpp  run.sh
assignment/tests/: test.cpp
include/: matrix.h
src/: Makefile.am  cwblas.cpp  main.cpp  matrix.c  run.sh
tests/: Makefile.am  test.cpp
